style: Add z-index for ToastProvider to prevent overlap

--- a/src/components/dialog/toast_provider/ToastProvider.module.scss
+++ b/src/components/dialog/toast_provider/ToastProvider.module.scss
@@ -9,5 +9,6 @@
     }
     @include media-breakpoint-up(sm) {
         min-width: 400px;
+        z-index: 1000002 !important;
     }
 }
